# spring-rust-demo

./: Cargo.toml  Readme.md  sbom.json  schema.sql
config/: app.toml
dev-docker/: docker-compose.yml
keycloakrealms/: realm-export.json
keys/: public.key
migration/: schema.sql
postgres-docker/: docker-compose.yml
src/: main.rs
src/config/: mail.rs  mod.rs  welds.rs
src/dao/: mod.rs  userdao.rs
src/domain/: model.rs
src/dto/: maildto.rs  mod.rs  userdto.rs  usermapper.rs
src/service/: mailservice.rs  mod.rs  userservice.rs
src/web/: jwt.rs  mod.rs  pagination.rs  web.rs
src/welds/: mod.rs  welds.rs
static/docs/: swagger-initializer.js
