[package]
name = "hello-spring-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# The spring-rs project uses the tokio asynchronous runtime by default
tokio = { version = "1.0", features = ["full"] }
spring = "0.4"
spring-web = { version = "0.4", features = [    "openapi-redoc",
    "openapi-scalar",
"openapi", "openapi-swagger"] }

spring-mail = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.14"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
schemars = { version = "0.9", features = ["derive", "chrono04"] }
anyhow = "1.0"
axum = { version="0.8",  features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-client-ip = "1.1"
axum-valid = "0.24.0"
problemdetails = { version = "0.6", features = ["axum"] }
validator = { version = "0.20", features = ["derive"] }
jsonwebtoken = "9.3"
pem = "3.0"
lazy_static = "1.4"
tracing = "0.1"
rand = "0.9"
welds = { version = "0.4.18", features = ["postgres","check","migrations"] }
sqlx = { version = "0.8.6", features = [ 'runtime-tokio-rustls',  "macros"] }

spring-macros = { version = "0.4" }
tower = "0.5"
tower-http = "0.6"
tower-layer = "0.3"
tower-service = "0.3"

[features]
# Defines a feature named `webp` that does not enable any other features.
default = ["postgres"]
#,"swagger-ui"]
postgres = []
mysql = []
mssql = []
#swagger-ui = ["utoipa-swagger-ui"]
